--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,9 +9,29 @@
   </head>
 
   <body>
+    <div class="nav navbar navbar-inverse">
+      <div class="container">
+          <%= link_to  "PhotoNetwork", root_path, class: "navbar-brand" %>
+          <% if user_signed_in? %>
+            <ul class="nav navbar-nav navbar-left">
+              <li><%= link_to  "Gram It!", new_pic_path %></li>
+              <li><%= link_to  "Settings", edit_user_registration_path %></li>
+              <li><%= link_to  "Sign out", destroy_user_session_path, method: :delete %></li>
+            </ul>
+          <% else %>
+            <ul class="nav navbar-nav navbar-left">
+              <li><%= link_to  "Join", new_user_registration_path %></li>
+              <li><%= link_to  "Log In", new_user_session_path %></li>
+            </ul>
+          <% end %>
+      </div>
+    </div>
+
+    <div class="container">
     <% flash.each do |name, msg| %>
       <%= content_tag :div, msg, class: "alert alert-info"  %>
     <% end %>
     <%= yield %>
+  </div>
   </body>
 </html>
