Added Jquery Masonry

--- a/app/views/pics/show.html.erb
+++ b/app/views/pics/show.html.erb
@@ -1,14 +1,28 @@
-<%= image_tag  @pic.image.url %>
-<h1>
-  <%= @pic.title %>
-</h1>
-  <p>
-    <%= @pic.description %>
-  </p>
-
-  <p>
-    <%= @pic.user.email %>
-  </p>
-  <%= link_to  "Back", root_path %>
-  <%= link_to  "Edit", edit_pic_path %>
-  <%= link_to  "Delete", pic_path, method: :delete, data: { confirm: "Are u sure?"} %>
+<main id="pic_show" class="row">
+  <section class="col-md-6 col-md-offset-3">
+    <div class="panel panel-default">
+      <header class="panel heading pic_image">
+        <%= image_tag @pic.image.url %>
+      </header>
+      <div class="panel-body">
+        <h1><%= @pic.title %></h1>
+        <p><%= @pic.description %></p>
+      </div>
+      <div class="panel-footer">
+        <div class="row">
+          <div class="col-md-6">
+            <p class="user">
+              By <%= @pic.user.email %>
+            </p>
+          </div>
+         
+        <div class="btn-group pull-right">
+          <% if user_signed_in? %>
+            <%= link_to  "Edit", edit_pic_path, class: "btn btn-info" %>
+            <%= link_to  "Delete", pic_path, method: :delete, data: { confirm: "Are u sure?"}, class: "btn btn-danger" %>
+          <% end %>
+        </div>
+      </div> 
+    </div>
+  </section>
+</main>
