--- a/app/views/pics/show.html.erb
+++ b/app/views/pics/show.html.erb
@@ -16,13 +16,19 @@
             </p>
           </div>
          
-        <div class="btn-group pull-right">
-          <% if user_signed_in? %>
-            <%= link_to  "Edit", edit_pic_path, class: "btn btn-info" %>
-            <%= link_to  "Delete", pic_path, method: :delete, data: { confirm: "Are u sure?"}, class: "btn btn-danger" %>
-          <% end %>
-        </div>
-      </div> 
+          <div class="btn-group pull-right">
+            <% if user_signed_in? %>
+            <%= link_to like_pic_path(@pic), method: :put, class: "btn btn-default" do %>
+            <span class="glyphicon glyphicon-thumbs-up">
+              <%= @pic.get_upvotes.size %>
+            </span>
+            <% end %>
+              <%= link_to  "Edit", edit_pic_path, class: "btn btn-info" %>
+              <%= link_to  "Delete", pic_path, method: :delete, data: { confirm: "Are u sure?"}, class: "btn btn-danger" %>
+            <% end %>
+          </div>
+        </div> 
+      </div>
     </div>
   </section>
 </main>
